switch to setup.cfg

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,17 @@
+[tox]
+isolated_build = True
+envlist =
+    py{36,37,38,39}
+    lint
+
 [testenv:py{36,37,38,39}]
 deps =
     mypy
     pytest
-commands = pytest ./
+commands =
+    pytest ./
 
 [testenv:lint]
-# format *the* module, not a copy
-changedir = {toxinidir}
 deps =
     black
     flake8
@@ -18,9 +23,24 @@ commands =
     flake8 ./
     mypy --config-file tox.ini ./gloss/
 
+[testenv:release]
+deps =
+    build
+    portray
+    twine
+commands =
+    portray as_html --overwrite
+    python -c 'import os; answer = input("Does file://" + os.path.realpath(os.path.join(os.getcwd(), "site", "index.html")) + " look good? [Y/n]: "); exit(answer not in ["", "Y", "y"])'
+    python -m build
+    python -m twine check --strict dist/*
+    python -m twine upload --repository testpypi dist/*
+    python -c 'answer = input("Does https://test.pypi.org/project/gloss-collection/ look good? [Y/n]: "); exit(answer not in ["", "Y", "y"])'
+    python -m twine upload dist/*
+
 [mypy]
 strict = True
 
 [flake8]
 max-line-length = 88
+exclude = .git,.pytest_cache,.mypy_cache,.tox,__pycache__,build,dist
 per-file-ignores = gloss/__init__.py:F401
