--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gloss-collection
-version = 1.1
+version = 1.2
 author = Jeremiah Paige
 author_email = ucodery@gmail.com
 description = A synchronous one-to-one mapping type
@@ -26,6 +26,10 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3
+zip_safe = no
 
 [options.extras_require]
 dev = tox
+
+[options.package_data]
+gloss = py.typed
