Move homepage to pypi.org/project/gloss

--- a/tox.ini
+++ b/tox.ini
@@ -29,12 +29,13 @@ deps =
     portray
     twine
 commands =
+    python -c 'import os, shutil; ... if not os.path.isdir("./dist") else shutil.rmtree("./dist")'
     portray as_html --overwrite
     python -c 'import os; answer = input("Does file://" + os.path.realpath(os.path.join(os.getcwd(), "site", "index.html")) + " look good? [Y/n]: "); exit(answer not in ["", "Y", "y"])'
     python -m build
     python -m twine check --strict dist/*
     python -m twine upload --repository testpypi dist/*
-    python -c 'answer = input("Does https://test.pypi.org/project/gloss-collection/ look good? [Y/n]: "); exit(answer not in ["", "Y", "y"])'
+    python -c 'answer = input("Does https://test.pypi.org/project/gloss/ look good? [Y/n]: "); exit(answer not in ["", "Y", "y"])'
     python -m twine upload dist/*
 
 [mypy]
