--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = gloss-collection
-version = 1.2.1
+name = gloss
+version = 1.2.2
 author = Jeremiah Paige
 author_email = ucodery@gmail.com
 description = A synchronous one-to-one mapping type
